// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stripe /> renders 1`] = `
<div>
  <span
    class="sc-aXZVg kGRGmY"
  />
</div>
`;

exports[`<Stripe /> renders with correct styles 1`] = `
<div>
  <span
    class="sc-aXZVg jZHzGo"
  />
</div>
`;
